usa as views de autenticação padrão do django, login e logout, criei url e o template para pagina de login. configueire login_direct_url para mandar o usuario pra pagina principal,  atualizei o template base pra exibir o status de login. converti o link de logout pra um formulario post

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,1 +1,20 @@
-<h1>Restaurantes encontrados: {{ restaurantes }}</h1>
+{% extends 'core/base.html' %}
+
+{% block content %}
+    <h1>Restaurantes Disponíveis</h1>
+
+    {% if restaurantes %}
+        <ul>
+            {% for r in restaurantes %}
+                <li>
+                    <a href="{% url 'core:detalhe_restaurante' pk=r.id %}">
+                        {{ r.nome }}
+                    </a>
+                    - ({{ r.tipo_cozinha }})
+                </li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <p>Nenhum restaurante cadastrado no momento.</p>
+    {% endif %}
+{% endblock %}
