criei a view e o template para pagina meus pedidos, protegi a página com login_required , Configura LOGIN_URL em settings.py para direcionar corretamente para a página de login.

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -12,6 +12,7 @@
             {% if user.is_authenticated %}
                 <span>Olá, {{ user.username }}!</span> |
                 <a href="{% url 'core:ver_carrinho' %}">Meu Carrinho</a> |
+                <a href="{% url 'core:meus_pedidos' %}">Meus Pedidos</a> | <form action="{% url 'core:logout' %}" method="post" style="display: inline;"></form>
                 <form action="{% url 'core:logout' %}" method="post" style="display: inline;">
                     {% csrf_token %}
                     <button type="submit" style="background:none; border:none; padding:0; color:blue; text-decoration:underline; cursor:pointer;">
